--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "migrate": "npx knex migrate:latest"
   },
   "keywords": [],
-  "author": "",
+  "author": "Felipe Diego Tamura",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
