--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node src/server.js",
-    "start": "nodemon src/server.js",
+    "start": "pm2-runtime start ecosystem.config.js --env production",
     "migrate": "npx knex migrate:latest"
   },
   "keywords": [],
@@ -22,6 +22,7 @@
     "knex": "^2.4.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
+    "pm2": "^5.3.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.6"
   }
